@@ -1,6 +1,6 @@
 Package: gridGraphics
 Title: Redraw Base Graphics Using 'grid' Graphics
-Version: 0.5-0
+Version: 0.5-1
 Authors@R: c(person("Paul", "Murrell", role = c("cre", "aut"),
                     email = "paul@stat.auckland.ac.nz"),
              person("Zhijian", "Wen", role = "aut",
@@ -16,9 +16,9 @@ Suggests: magick (>= 1.3), pdftools (>= 1.6)
 License: GPL (>= 2)
 URL: https://github.com/pmur002/gridgraphics
 NeedsCompilation: no
-Packaged: 2020-02-25 00:26:28 UTC; pmur002
+Packaged: 2020-12-10 01:41:04 UTC; pmur002
 Author: Paul Murrell [cre, aut],
   Zhijian Wen [aut]
 Maintainer: Paul Murrell <paul@stat.auckland.ac.nz>
 Repository: CRAN
-Date/Publication: 2020-02-25 06:40:12 UTC
+Date/Publication: 2020-12-13 21:20:03 UTC
